I added the Images folder

--- a/Images/index.html
+++ b/Images/index.html
@@ -17,18 +17,13 @@
           <li><a href="#Portofolio">Portfolio</a></li>
           <li><a href="#Contacts">Contacts</a></li>
         </ul>
+        <div>
+          <!-- Link to phone number  -->
+          <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+          <!-- Link to e-mail address -->
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </div>
       </nav>
-      <!--Contacts section-->
-      <adress>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </adress>
     </header>
     <!--Title-->
     <section>
@@ -78,19 +73,19 @@
       <div>
         <h2>What are we doing</h2>
         <img
-          src="./Images/img 1.jpg"
+          src="Images/img 1.jpg"
           alt="Computer"
           width="360px"
           height="300px"
         />
         <img
-          src="./Images/Rectangle 71.jpg"
+          src="Images/Rectangle 71.jpg"
           alt="Smartphones"
           width="360px"
           height="300px"
         />
         <img
-          src="./Images/Rectangle 71 (1).jpg"
+          src="Images/Rectangle 71 (1).jpg"
           alt="Display-image"
           width="360px"
           height="300px"
@@ -146,9 +141,9 @@
         width="1440px"
         height="312px"
       />
-      <adress>
+      <p>
         <a href="/index.html">WebSudio</a>
-      </adress>
+      </p>
 
       <p>
         Increase the flow of customers and <br />
