I deleted the points images section what we do

--- a/index.html
+++ b/index.html
@@ -78,19 +78,19 @@
       <div>
         <h2>What are we doing</h2>
         <img
-          src="./Images/img 1.jpg"
+          src="Images/img 1.jpg"
           alt="Computer"
           width="360px"
           height="300px"
         />
         <img
-          src="./Images/Rectangle 71.jpg"
+          src="Images/Rectangle 71.jpg"
           alt="Smartphones"
           width="360px"
           height="300px"
         />
         <img
-          src="./Images/Rectangle 71 (1).jpg"
+          src="Images/Rectangle 71 (1).jpg"
           alt="Display-image"
           width="360px"
           height="300px"
