--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       <p>
         Increase the flow of customers and <br />
         sales for your business with digital <br />
-        marketing & growth solutions.
+        marketing & growth solutions. <br />
       </p>
     </footer>
   </body>
