--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
   </head>
   <body>
     <header>
-      <!--Logo-->
-      <a href="/index.html">WebSudio</a>
-      <a href="Images/logo.svg" alt="Logo"> </a>
       <!--Navigation-->
       <nav>
+        <!--Logo-->
+        <a href="./index.html">WebSudio</a>
         <ul>
           <li><a href="#Studio">Studio</a></li>
           <li><a href="#Portofolio">Portfolio</a></li>
@@ -25,135 +24,126 @@
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+            <a href="tel:tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </adress>
     </header>
-    <!--Title-->
-    <section>
-      <div>
-        <img
-          src="Images/Dark-bg.jpg"
-          alt="Dark-header"
-          width="1440px"
-          height="600px"
-        />
-        <h1><b>Effective Solutions for Your Business</b></h1>
-      </div>
-    </section>
-    <!--Control button-->
-    <div>
-      <button>Order Service</button>
-    </div>
-    <!--Description paragraphs-->
     <main>
-      <div>
-        <h3>Strategy</h3>
-        <p>
-          Our goal is to identify the business <br />
-          problem to walk away with <br />
-          the perfect and creative solution <br />
-        </p>
-        <h3>Punctuality</h3>
-        <p>
-          Bring the key message to the <br />
-          brand's audience for the best price <br />
-          within the shortest possible time. <br />
-        </p>
-        <h3>Diligence</h3>
-        <p>
-          Research and confirm brands that <br />
-          present the strongest digital growth <br />
-          opportunities and minimize risk.
-        </p>
-        <h3>Technologies</h3>
-        <p>
-          Design practice focused on digital <br />
-          experiences. We bring forth a deep passion <br />
-          for problem-solving.
-        </p>
-      </div>
-      <!--What are we doing-->
-      <div>
+      <!--hero image section-->
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+      <!--list of qualities of Webstudio-->
+      <section>
+        <h2>Qualities</h2>
+        <!--Description of Webstudio-->
+        <ul>
+          <h3>Strategy</h3>
+          <p>
+            Our goal is to identify the business <br />
+            problem to walk away with <br />
+            the perfect and creative solution <br />
+          </p>
+          <h3>Punctuality</h3>
+          <p>
+            Bring the key message to the <br />
+            brand's audience for the best price <br />
+            within the shortest possible time. <br />
+          </p>
+          <h3>Diligence</h3>
+          <p>
+            Research and confirm brands that <br />
+            present the strongest digital growth <br />
+            opportunities and minimize risk.
+          </p>
+          <h3>Technologies</h3>
+          <p>
+            Design practice focused on digital <br />
+            experiences. We bring forth a deep passion <br />
+            for problem-solving.
+          </p>
+        </ul>
+      </section>
+      <section>
         <h2>What are we doing</h2>
-        <img
-          src="Images/img 1.jpg"
-          alt="Computer"
-          width="360px"
-          height="300px"
-        />
-        <img
-          src="Images/Rectangle 71.jpg"
-          alt="Smartphones"
-          width="360px"
-          height="300px"
-        />
-        <img
-          src="Images/Rectangle 71 (1).jpg"
-          alt="Display-image"
-          width="360px"
-          height="300px"
-        />
-      </div>
+        <!--What are we doing-->
+        <li>
+          <img
+            src="./Images/img 1.jpg"
+            alt="Computer"
+            width="360px"
+            height="300px"
+          />
+          <img
+            src="./Images/Rectangle 71.jpg"
+            alt="Smartphones"
+            width="360px"
+            height="300px"
+          />
+          <img
+            src="./Images/Rectangle 71 (1).jpg"
+            alt="Display-image"
+            width="360px"
+            height="300px"
+          />
+        </li>
+      </section>
       <!--Our Team-->
-      <div>
+      <section>
         <h2>Our Team</h2>
-        <img
-          src="Images/img (3).jpg"
-          alt="Product-designer"
-          width="264px"
-          height="260px"
-        />
-        <h3>Mark Guerrero</h3>
-        <p>Product Designer</p>
-      </div>
-      <div>
-        <img
-          src="Images/img.jpg"
-          alt="Freontend-developper"
-          width="264px"
-          height="260px"
-        />
-        <h3>Tom Ford</h3>
-        <p>Frontend Developer</p>
-      </div>
-      <div>
-        <img
-          src="Images/img (1).jpg"
-          alt="Marketing"
-          width="264px"
-          height="260px"
-        />
-        <h3>Camila Garcia</h3>
-        <p>Marketing</p>
-      </div>
-      <div>
-        <img
-          src="Images/img (2).jpg"
-          alt="UI-designer"
-          width="264px"
-          height="260px"
-        />
-        <h3>Daniel Wilson</h3>
-        <p>UI Designer</p>
-      </div>
+        <ul>
+          <li>
+            <img
+              src="./Images/img (3).jpg"
+              alt="Product-designer"
+              width="264px"
+              height="260px"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./Images/img.jpg"
+              alt="Freontend-developper"
+              width="264px"
+              height="260px"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./Images/img (1).jpg"
+              alt="Marketing"
+              width="264px"
+              height="260px"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./Images/img (2).jpg"
+              alt="UI-designer"
+              width="264px"
+              height="260px"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
-      <img
-        src="Images/Dark-bg.jpg"
-        alt="Dark-footer"
-        width="1440px"
-        height="312px"
-      />
       <adress>
-        <a href="/index.html">WebSudio</a>
+        <a href="./index.html">WebSudio</a>
       </adress>
-
       <p>
-        Increase the flow of customers and <br />
-        sales for your business with digital <br />
-        marketing & growth solutions. <br />
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
       </p>
     </footer>
   </body>
