<ul> and <li> elements

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <!--Navigation-->
       <nav>
         <!--Logo-->
-        <a href="./index.html">WebSudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="#Studio">Studio</a></li>
           <li><a href="#Portofolio">Portfolio</a></li>
@@ -40,55 +40,69 @@
         <h2>Qualities</h2>
         <!--Description of Webstudio-->
         <ul>
-          <h3>Strategy</h3>
-          <p>
-            Our goal is to identify the business <br />
-            problem to walk away with <br />
-            the perfect and creative solution <br />
-          </p>
-          <h3>Punctuality</h3>
-          <p>
-            Bring the key message to the <br />
-            brand's audience for the best price <br />
-            within the shortest possible time. <br />
-          </p>
-          <h3>Diligence</h3>
-          <p>
-            Research and confirm brands that <br />
-            present the strongest digital growth <br />
-            opportunities and minimize risk.
-          </p>
-          <h3>Technologies</h3>
-          <p>
-            Design practice focused on digital <br />
-            experiences. We bring forth a deep passion <br />
-            for problem-solving.
-          </p>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business <br />
+              problem to walk away with <br />
+              the perfect and creative solution <br />
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the <br />
+              brand's audience for the best price <br />
+              within the shortest possible time. <br />
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that <br />
+              present the strongest digital growth <br />
+              opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital <br />
+              experiences. We bring forth a deep passion <br />
+              for problem-solving.
+            </p>
+          </li>
         </ul>
       </section>
       <section>
         <h2>What are we doing</h2>
         <!--What are we doing-->
-        <li>
-          <img
-            src="./Images/img 1.jpg"
-            alt="Computer"
-            width="360px"
-            height="300px"
-          />
-          <img
-            src="./Images/Rectangle 71.jpg"
-            alt="Smartphones"
-            width="360px"
-            height="300px"
-          />
-          <img
-            src="./Images/Rectangle 71 (1).jpg"
-            alt="Display-image"
-            width="360px"
-            height="300px"
-          />
-        </li>
+        <ul>
+          <li>
+            <img
+              src="./Images/img 1.jpg"
+              alt="Computer"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./Images/Rectangle 71.jpg"
+              alt="Smartphones"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./Images/Rectangle 71 (1).jpg"
+              alt="Display-image"
+              width="360"
+              height="300"
+            />
+          </li>
+        </ul>
       </section>
       <!--Our Team-->
       <section>
@@ -98,8 +112,8 @@
             <img
               src="./Images/img (3).jpg"
               alt="Product-designer"
-              width="264px"
-              height="260px"
+              width="264"
+              height="260"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
@@ -108,8 +122,8 @@
             <img
               src="./Images/img.jpg"
               alt="Freontend-developper"
-              width="264px"
-              height="260px"
+              width="264"
+              height="260"
             />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
@@ -118,8 +132,8 @@
             <img
               src="./Images/img (1).jpg"
               alt="Marketing"
-              width="264px"
-              height="260px"
+              width="264"
+              height="260"
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
@@ -128,8 +142,8 @@
             <img
               src="./Images/img (2).jpg"
               alt="UI-designer"
-              width="264px"
-              height="260px"
+              width="264"
+              height="260"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
@@ -139,7 +153,7 @@
     </main>
     <footer>
       <adress>
-        <a href="./index.html">WebSudio</a>
+        <a href="./index.html">WebStudio</a>
       </adress>
       <p>
         Increase the flow of customers and sales for your business with digital
