--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+11000111111">+11000111111</a>
           </li>
         </ul>
       </adress>
@@ -37,7 +37,7 @@
       </section>
       <!--list of qualities of Webstudio-->
       <section>
-        <h2>Qualities</h2>
+        <h2 hidden>Qualities</h2>
         <!--Description of Webstudio-->
         <ul>
           <li>
@@ -76,7 +76,7 @@
         <ul>
           <li>
             <img
-              src="./Images/img1.jpg"
+              src="./images/img1.jpg"
               alt="Computer"
               width="360"
               height="300"
@@ -84,7 +84,7 @@
           </li>
           <li>
             <img
-              src="./Images/Rectangle71.jpg"
+              src="./images/Rectangle71.jpg"
               alt="Smartphones"
               width="360"
               height="300"
@@ -92,7 +92,7 @@
           </li>
           <li>
             <img
-              src="./Images/Rectangle71(1).jpg"
+              src="./images/Rectangle71(1).jpg"
               alt="Display-image"
               width="360"
               height="300"
@@ -106,7 +106,7 @@
         <ul>
           <li>
             <img
-              src="./Images/img(3).jpg"
+              src="./images/img(3).jpg"
               alt="Product-designer"
               width="264"
               height="260"
@@ -116,7 +116,7 @@
           </li>
           <li>
             <img
-              src="./Images/img.jpg"
+              src="./images/img.jpg"
               alt="Freontend-developper"
               width="264"
               height="260"
@@ -126,7 +126,7 @@
           </li>
           <li>
             <img
-              src="./Images/img(1).jpg"
+              src="./images/img(1).jpg"
               alt="Marketing"
               width="264"
               height="260"
@@ -136,7 +136,7 @@
           </li>
           <li>
             <img
-              src="./Images/img(2).jpg"
+              src="./images/img(2).jpg"
               alt="UI-designer"
               width="264"
               height="260"
