--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         </ul>
       </nav>
       <!--Contacts section-->
-      <adress>
+      <address>
         <ul>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+11000111111">+11000111111</a>
+            <a href="tel:+110001111111">+11(000)111-11-11</a>
           </li>
         </ul>
-      </adress>
+      </address>
     </header>
     <main>
       <!--hero image section-->
